--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -1,7 +1,7 @@
 name: hello-world
 on: push
 jobs:
-  hello-world-jo:
+  hello-world-job:
     runs-on: ubuntu-lates
     steps:
       - name: Check out repository code
@@ -12,4 +12,16 @@ jobs:
         with:
           node-version: '18.x'
       - run: npm install
-      - run: npm build
+      - run: npm run build
+    test:
+      needs: build
+      runs.on: ubuntu-latest
+      steps:
+        - name: Checkout repo
+          uses: actions/checkout@v3
+        - name: use node.js
+          uses: actions/setup-node@v3
+          with:
+            node-version: '18.x'
+        - run: npm install
+        - run: npm test
